--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,6 +79,10 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
+# Fix LSOpenURLsWithRole() error on OS X. Requires reattach-to-user-namespace
+# to be installed.
+set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+
 ##############
 # Copy/Pasta #
 ##############
