--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,9 +68,6 @@ bind-key , command-prompt -p "Enter window name:" "rename-window '%%'"
 # Number windows starting at 1
 set -g base-index 1
 
-# Fix annoying delay
-set status-interval 1
-
 # Navigation between vim and tmux panes made easy
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
@@ -88,12 +85,12 @@ set-option -g default-command "which reattach-to-user-namespace > /dev/null && r
 ##############
 
 # Setup copy paste like vim for copy mode
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v begin-selection
+bind-key -T copy-mode-vi y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of enter to use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -T copy-mode-vi Enter
+bind-key -T vi copy-mode-vi Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Bind ']' to use pbpaste
 bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
@@ -112,9 +109,16 @@ set -g status-bg colour234
 set -g status-fg colour137
 set -g status-attr dim
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-set -g status-right-length 50
+
+# Doing too much™ in the Status Bar
+# Show what's playing on Spotify
+# Show next gcal event
+# Show date and time
+# Use/Abuse emojis
+set -g status-right '#[fg=green] 👿 #(spotify status | sed -n 2,5p | cut -f2- -d: | tr "\n" " ")   📅 #[fg=cyan] #(gcalcli --nostarted --calendar "" agenda --nocolor | cut -d " " -f 4- | head -2 | tail -1 | sed "s/^ *//g" | sed "s/    / /g" | cut -c1-29)  #[fg=colour9,bold] 🎃  👻  🌙  %A %b %d, %Y  🕒 #[fg=colour15] %r %Z'
+set -g status-right-length 175
 set -g status-left-length 20
+set status-interval 1 # Fix annoying time delay
 
 setw -g window-status-current-fg colour81
 setw -g window-status-current-bg colour238
@@ -132,3 +136,7 @@ setw -g window-status-bell-bg colour1
 
 set -g default-terminal "screen"
 set -g terminal-overrides 'xterm*:smcup <at> :rmcup <at> :colors=256'
+
+# Pane Status
+setw -g pane-border-status
+setw -g pane-border-format "#P: #{pane_current_path} (#{pane_current_command})"
