Update status bar with more emojis...
* Now it looks like [this](https://i.imgur.com/fz0Hloo.png)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -105,7 +105,7 @@ set -g visual-activity on
 
 # window status
 set -g status-position bottom
-set -g status-bg colour234
+set -g status-bg black
 set -g status-fg colour137
 set -g status-attr dim
 set -g status-left ''
@@ -115,8 +115,8 @@ set -g status-left ''
 # Show next gcal event
 # Show date and time
 # Use/Abuse emojis
-set -g status-right '#[fg=green] 👿 #(spotify status | sed -n 2,5p | cut -f2- -d: | tr "\n" " ")   📅 #[fg=cyan] #(gcalcli --nostarted --calendar "" agenda --nocolor | cut -d " " -f 4- | head -2 | tail -1 | sed "s/^ *//g" | sed "s/    / /g" | cut -c1-29)  #[fg=colour9,bold] 🎃  👻  🌙  %A %b %d, %Y  🕒 #[fg=colour15] %r %Z'
-set -g status-right-length 175
+set -g status-right '#[fg=green] 👿 #(spotify status | sed -n 2,5p | cut -f2- -d: | tr "\n" " ")   📅 #[fg=yellow] (#(cat ~/.gcalcli/next_event | cut -f -3 -d" ")) #[fg=cyan] #(cat ~/.gcalcli/next_event | cut -f 4- -d " ") #[fg=colour9,bold] ❤️  💋  🍓  %A %b %d, %Y  🕒 #[fg=colour15] %r %Z'
+set -g status-right-length 200
 set -g status-left-length 20
 set status-interval 1 # Fix annoying time delay
 
