Fix status bar in tmux config file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -115,7 +115,7 @@ set -g status-left ''
 # Show next gcal event
 # Show date and time
 # Use/Abuse emojis
-set -g status-right '#[fg=green] 👿 #(spotify status | sed -n 2,5p | cut -f2- -d: | tr "\n" " ")   📅 #[fg=yellow] (#(cat ~/.gcalcli/next_event | cut -f -3 -d" ")) #[fg=cyan] #(cat ~/.gcalcli/next_event | cut -f 4- -d " ") #[fg=colour9,bold] 🦋  🐸  🦑  %A %b %d, %Y  🕒 #[fg=colour15] %r %Z'
+set -g status-right '#[fg=green] 👿 #(spotify status | sed -n 2,5p | sed -e '2d' | cut -f2- -d: | tr "\n" " ")   📅 #[fg=yellow] (#(cat ~/.gcalcli_next_event | cut -f -3 -d" ")) #[fg=cyan] #(cat ~/.gcalcli_next_event | cut -f 4- -d " ") #[fg=colour9,bold] 🦋  🐸  🦑  %A %b %d, %Y  🕒 #[fg=colour15] %r %Z'
 set -g status-right-length 200
 set -g status-left-length 20
 set status-interval 1 # Fix annoying time delay
