Manage tmux plugins with TPM
* TPM Installed in my-osx-setup [here](https://git.io/vhWrL)
* Install TPM itself
* Install Resurrect plugin to restore tmux environment after system restart

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -140,3 +140,10 @@ set -g terminal-overrides 'xterm*:smcup <at> :rmcup <at> :colors=256'
 # Pane Status
 setw -g pane-border-status
 setw -g pane-border-format "#P: #{pane_current_path} (#{pane_current_command})"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
