--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,7 +49,8 @@ set -g history-limit 10240
 set -g pane-border-bg colour235
 set -g pane-border-fg colour238
 set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour46
+set -g pane-active-border-fg colour12
+set display-panes-time 4000
 
 # Navigation between vim and tmux panes made easy
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
