Comment out copy/paste line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,7 +86,7 @@ set-option -g default-command "which reattach-to-user-namespace > /dev/null && r
 ##############
 
 # Setup copy paste like vim for copy mode
-bind-key -T copy-mode-vi v begin-selection
+#bind-key -T copy-mode-vi v begin-selection
 bind-key -T copy-mode-vi y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of enter to use copy-pipe
