--- a/.inputrc
+++ b/.inputrc
@@ -1,2 +1,10 @@
 # Ctrl + t prepends command with `time`
 "\C-t": "\C-atime \C-m"
+
+# mappings for Ctrl-left-arrow and Ctrl-right-arrow for word moving
+"\e[1;5C": forward-word
+"\e[1;5D": backward-word
+"\e[5C": forward-word
+"\e[5D": backward-word
+"\e\e[C": forward-word
+"\e\e[D": backward-word
