--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,6 +52,24 @@ set -g pane-active-border-bg colour236
 set -g pane-active-border-fg colour12
 set display-panes-time 4000
 
+#-------------------------------------------------------#
+# Pane colours
+#-------------------------------------------------------#
+# set inactive/active window styles
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=black'
+
+# Pane border
+set -g pane-border-bg colour235
+set -g pane-border-fg colour238
+set -g pane-active-border-bg colour236
+set -g pane-active-border-fg colour51
+
+# Pane Status
+set -g pane-border-status
+set -g pane-border-format "#P: #{pane_current_path} (#{pane_current_command})"
+#-------------------------------------------------------#
+
 # Navigation between vim and tmux panes made easy
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
@@ -137,10 +155,6 @@ setw -g window-status-bell-bg colour1
 
 set -g default-terminal "screen"
 set -g terminal-overrides 'xterm*:smcup <at> :rmcup <at> :colors=256'
-
-# Pane Status
-setw -g pane-border-status
-setw -g pane-border-format "#P: #{pane_current_path} (#{pane_current_command})"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
