Migrate configs to from 2.8.X to 2.9.X

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,11 +46,11 @@ unbind %
 set -g history-limit 10240
 
 # The panes
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour12
-set display-panes-time 4000
+set -g pane-border-style bg=colour235
+set -g pane-border-style fg=colour238
+set -g pane-active-border-style bg=colour236
+set -g pane-active-border-style fg=colour12
+set -g display-panes-time 4000
 
 #-------------------------------------------------------#
 # Pane colours
@@ -60,10 +60,10 @@ set -g window-style 'fg=colour247,bg=colour236'
 set -g window-active-style 'fg=colour250,bg=black'
 
 # Pane border
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
+set -g pane-border-style bg=colour235
+set -g pane-border-style fg=colour238
+set -g pane-active-border-style bg=colour236
+set -g pane-active-border-style fg=colour51
 
 # Pane Status
 set -g pane-border-status
@@ -105,11 +105,12 @@ set-option -g default-command "which reattach-to-user-namespace > /dev/null && r
 
 # Setup copy paste like vim for copy mode
 #bind-key -T copy-mode-vi v begin-selection
-bind-key -T copy-mode-vi y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 # Update default binding of enter to use copy-pipe
 unbind -T copy-mode-vi Enter
-bind-key -T vi copy-mode-vi Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -T vi copy-mode-vi Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind -Tcopy-mode-vi M-y send -X copy-pipe "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
 
 # Bind ']' to use pbpaste
 bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
@@ -126,7 +127,7 @@ set -g visual-activity on
 set -g status-position bottom
 set -g status-bg black
 set -g status-fg colour137
-set -g status-attr dim
+set -g status-style "dim"
 set -g status-left ''
 
 # Doing too much™ in the Status Bar
@@ -137,21 +138,21 @@ set -g status-left ''
 set -g status-right '#[fg=green] 👿 #(spotify status | sed -n 2,5p | sed -e '2d' | cut -f2- -d: | tr "\n" " ")   📅 #[fg=yellow] (#(cat ~/.gcalcli_next_event | cut -f -3 -d" ")) #[fg=cyan] #(cat ~/.gcalcli_next_event | cut -f 4- -d " ") #[fg=colour9,bold] 🦋  🐸  🦑  %A %b %d, %Y  🕒 #[fg=colour15] %r %Z'
 set -g status-right-length 200
 set -g status-left-length 20
-set status-interval 1 # Fix annoying time delay
+set -g status-interval 1 # Fix annoying time delay
 
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
+setw -g window-status-current-style fg=colour81
+setw -g window-status-current-style bg=colour238
+setw -g window-status-current-style "bold"
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
+setw -g window-status-style fg=colour138
+setw -g window-status-style bg=colour235
+setw -g window-status-style "none"
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+setw -g window-status-bell-style "bold"
+setw -g window-status-bell-style fg=colour255
+setw -g window-status-bell-style bg=colour1
 
 set -g default-terminal "screen"
 set -g terminal-overrides 'xterm*:smcup <at> :rmcup <at> :colors=256'
