Make the status bar style bold

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -127,7 +127,7 @@ set -g visual-activity on
 set -g status-position bottom
 set -g status-bg black
 set -g status-fg colour137
-set -g status-style "dim"
+set -g status-style "bold"
 set -g status-left ''
 
 # Doing too much™ in the Status Bar
