--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 # Enable mouse mode (tmux 2.1 and above)
 set-option -g mouse on
 
+# Toggle mouse with ^M; then report it's new status
+bind-key C-m set-option -g mouse \; display-message 'Mouse #{?mouse,on,off}'
+
 # allow selecting the pane with the mouse wheel
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
@@ -76,7 +79,7 @@ bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n 'C-\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Reload config hotkey
 bind-key r source-file ~/.tmux.conf\; display-message "Configuration reloaded."
@@ -93,7 +96,7 @@ bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n 'C-\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Fix LSOpenURLsWithRole() error on OS X. Requires reattach-to-user-namespace
 # to be installed.
